crates/rome_js_formatter/tests/specs/prettier/js/return-outside-function/return-outside-function.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
---

# Input

```js
return someVeryLongStringA && someVeryLongStringB && someVeryLongStringC && someVeryLongStringD
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1,6 +1 @@
-return (
-  someVeryLongStringA &&
-  someVeryLongStringB &&
-  someVeryLongStringC &&
-  someVeryLongStringD
-);
+return someVeryLongStringA && someVeryLongStringB && someVeryLongStringC && someVeryLongStringD
```

# Output

```js
return someVeryLongStringA && someVeryLongStringB && someVeryLongStringC && someVeryLongStringD
```


# Errors
```
error[SyntaxError]: Illegal return statement outside of a function
  ┌─ return-outside-function.js:1:1
  │
1 │ return someVeryLongStringA && someVeryLongStringB && someVeryLongStringC && someVeryLongStringD
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


```

# Lines exceeding max width of 80 characters
```
    1: return someVeryLongStringA && someVeryLongStringB && someVeryLongStringC && someVeryLongStringD
```

